--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 python-dotenv = "*"
 anthropic = "*"
 flask = "*"
+pytube = "*"
+speechrecognition = "*"
+moviepy = "==1.0.3"
 
 [dev-packages]
 
