--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,9 @@ name = "pypi"
 python-dotenv = "*"
 anthropic = "*"
 flask = "*"
-pytube = "*"
 speechrecognition = "*"
 moviepy = "==1.0.3"
+pytubefix = "*"
 
 [dev-packages]
 
