Refactor YouTube processing to use Whisper for audio transcription and clean up temporary files

--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,9 @@ name = "pypi"
 python-dotenv = "*"
 anthropic = "*"
 flask = "*"
-speechrecognition = "*"
 moviepy = "==1.0.3"
 pytubefix = "*"
+openai-whisper = "*"
 
 [dev-packages]
 
